tests/snapshots/snapshots__list_default_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxedo-snapshot.txt  •  15 tas DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @la created   2026-05-01             
   +health           3      2   (A) Call dentist to reschedule cle due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home             1      3   (B) Review pull requests for auth  contexts  @laptop                
   +learning         1      4   (B) Renew passport before summer t                                  
   +personal         1      5   (B) Draft hiring rubric for senior                                  
   +travel           1     (2)  PRIORITY C  ──────────────────────                                  
                            6   (C) Pay quarterly estimated taxes                                   
 CONTEXTS                   7   (C) Order new running shoes +healt                                  
   @errands          4     (8)  NO PRIORITY  ─────────────────────                                  
   @home             4      8       Migrate analytics to new pipel                                  
   @laptop           4      9       Pay rent due:2026-05-15 rec:+1                                  
   @phone            3     10       Pick up dry cleaning @errands                                   
                           11       Schedule annual physical @phon                                  
                           12       Read "Designing Data-Intensive                                  
                           13       Send thank-you note to mentor                                   
                           14       Plan Saturday hike with K. @ph                                  
                           15       Replace bathroom faucet washer                                  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 NORMAL   j/k · n new · r reschedule · x done · / sear15 open · 2026-05-06 · tuxedo 2026.7.1-prumo5
